<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".view.login.LoginFragment">

    <TextView
        android:id="@+id/login_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/login_title"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_field_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_field_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="8dp"
        android:ems="12"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/login_field_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/login_field_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="8dp"
        android:ems="12"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_field_email" />

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/login_login_button"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/login_field_password"
        app:layout_constraintStart_toStartOf="@+id/login_field_password"
        app:layout_constraintTop_toBottomOf="@+id/login_field_password" />

    <TextView
        android:id="@+id/login_button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:padding="18dp"
        android:text="@string/login_register_button"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>