<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/fragment_register"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/white"
	tools:context=".view.register.RegisterFragment">

	<ImageButton
		android:id="@+id/register_button_back"
		android:layout_width="0dp"
		android:layout_height="54dp"
		android:layout_marginTop="8dp"
		android:background="@android:color/transparent"
		android:padding="16dp"
		android:scaleType="centerInside"
		android:src="@drawable/ic_back"
		android:tint="@color/colorPrimary"
		app:layout_constraintDimensionRatio="w,1:1"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:ignore="ContentDescription" />

	<TextView
		android:id="@+id/register_text_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
		android:text="@string/register_title"
		android:textColor="@color/colorPrimary"
		android:textSize="24sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toTopOf="@+id/register_field_email"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<EditText
		android:id="@+id/register_field_email"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="48dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="48dp"
		android:layout_marginBottom="8dp"
		android:ems="12"
		android:hint="@string/register_email_hint"
		android:inputType="textEmailAddress"
		android:textSize="15sp"
		app:layout_constraintBottom_toTopOf="@+id/register_field_password"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.45"
		app:layout_constraintVertical_chainStyle="packed" />

	<EditText
		android:id="@+id/register_field_password"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="48dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="48dp"
		android:layout_marginBottom="8dp"
		android:ems="12"
		android:hint="@string/register_password_hint"
		android:inputType="textPassword"
		android:textSize="15sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/register_field_email" />

	<Button
		android:id="@+id/register_button_register"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:backgroundTint="@color/colorAccent"
		android:paddingTop="16dp"
		android:paddingBottom="16dp"
		android:text="@string/register_register_button"
		android:textColor="@android:color/white"
		app:layout_constraintEnd_toEndOf="@+id/register_field_password"
		app:layout_constraintStart_toStartOf="@+id/register_field_password"
		app:layout_constraintTop_toBottomOf="@+id/register_field_password" />

</androidx.constraintlayout.widget.ConstraintLayout>